chore: remove comment

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -95,7 +95,7 @@
     content: "";
     position: absolute;
     left: 0;
-    top: 0.65em; /* Adjust this value if necessary */
+    top: 0.65em;
     width: 0.5em;
     height: 0.5em;
     margin-right: 0.5em;
