--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -81,18 +81,15 @@
 }
 
 .ProseMirror p.is-empty::before {
-  color: #adb5bd;
+  @apply text-slate-400 float-left h-0 pointer-events-none;
   content: attr(data-placeholder);
-  float: left;
-  height: 0;
-  pointer-events: none;
 }
 
 .iframe-block iframe {
-  width: 100%;
-  height: 100%;
+  @apply w-full h-full;
 }
 
+/* Lit Protocol Signing Modal */
 #lcm-modal-overlay {
   z-index: 51;
 }
